--- a/WPF_project_Cafe.csproj
+++ b/WPF_project_Cafe.csproj
@@ -75,6 +75,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Sub_cafe.xaml.cs">
+      <DependentUpon>Sub_cafe.xaml</DependentUpon>
+    </Compile>
     <Page Include="Main_Cafe.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -83,11 +86,17 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="beverage.cs" />
     <Compile Include="DBSqlite.cs" />
+    <Compile Include="GlobalVar.cs" />
     <Compile Include="Main_Cafe.xaml.cs">
       <DependentUpon>Main_Cafe.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Sub_cafe.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PaymentInfo.cs" />
